--- a/src/pages/engagements.astro
+++ b/src/pages/engagements.astro
@@ -12,7 +12,7 @@ import LeafOnChipReference from "@assets/leaf-on-chip.webp";
 import actionsConcretesReference from "@assets/green_prez.webp";
 ---
 
-<BaseLayout title="Nos engagements">
+<BaseLayout title="Nos engagements" description="Les engagements de LOG">
     <Banner
         title="Engagements"
         subtitle="En complément de nos valeurs d'excellence et d'expertise, l'engagement pour un numérique ayant un impact minimum sur l'environnement fait partie de l'ADN de LOG et de ses fondateurs."
