--- a/src/pages/expertise.astro
+++ b/src/pages/expertise.astro
@@ -9,7 +9,7 @@ import EcosystemeTechnologiqueReference from "@assets/expertise-technos.webp";
 import DatacenterReference from "@assets/expertise-1.webp";
 ---
 
-<BaseLayout title="Notre expertise">
+<BaseLayout title="Notre expertise" description="Les expertises de LOG">
     <Banner
         title="Nos expertises"
         subtitle="Nos stacks technologiques ? Les technologies Cloud et l’écosystème DevOps !"
