--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import SectionTeam from '@components/homepage/section_team.astro';
 import SectionWeAreLog from '@components/homepage/section_wearelog.astro';
 ---
 
-<BaseLayout title="Accueil">
+<BaseLayout title="Accueil" description="Accueil du site web de LOG">
     <SectionWeAreLog />
     <SectionNumbers />
     <SectionExpertise />
