--- a/src/pages/les-loggers.astro
+++ b/src/pages/les-loggers.astro
@@ -11,7 +11,7 @@ import LoggersBannerReference from "@assets/loggers-1.webp";
 import WhyReference from "@assets/Laetitia.webp";
 ---
 
-<BaseLayout title="Les Loggers">
+<BaseLayout title="Les Loggers" description="L'équipe de LOG">
     <Banner
         title="Les Loggers"
         subtitle="Curieux, passionnés de technologie, investis dans leur travail, mais aussi bons vivants, les loggers forment une Tribu aussi sympathique qu’efficace. L’entraide est aussi une caractéristique importante des Loggers. Elle est favorisée par le Management de type Coaching et par la culture d’entreprise d’une manière générale."
