--- a/src/pages/metiers.astro
+++ b/src/pages/metiers.astro
@@ -8,7 +8,7 @@ import { BackgroundColor, BorderColor, TextColor } from "@libs/types";
 import LoggersBannerReference from "@assets/metiers-1.webp";
 ---
 
-<BaseLayout title="Nos métiers">
+<BaseLayout title="Notre métier" description="Le métier de LOG">
     <Banner
         title="Notre métier"
         subtitle="Accélérer et sécuriser la transformation des organisations en les guidant dans l'adoption des technologies Cloud et de la philosophie DevOps"
