--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,8 +4,9 @@ import Header from '@components/ui/header.astro';
 
 interface Props {
     title: string;
+    description: string;
 }
-const { title } = Astro.props;
+const { title, description } = Astro.props as Props;
 ---
 
 <html lang="fr">
@@ -13,6 +14,7 @@ const { title } = Astro.props;
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{title}</title>
+        <meta name="description" content={description} />
         <link rel="icon" href="/favicon.svg" type="image/svg+xml"> {/* Modern browsers */}
         <link rel="icon" href="/favicon.ico" type="image/x-icon"> {/* Fallback for older browsers */}
         <link rel="sitemap" href="/sitemap-index.html" />
