--- a/src/layouts/JobOfferLayout.astro
+++ b/src/layouts/JobOfferLayout.astro
@@ -6,11 +6,12 @@ import TitleBanner from "@components/ui/title_banner.astro";
 interface Props {
     title: string;
     email: string;
+    description: string;
 }
-const { title, email } = Astro.props as Props;
+const { title, email, description } = Astro.props as Props;
 ---
 
-<BaseLayout title="Offre d'emploi - LOG">
+<BaseLayout title="Offre d'emploi - LOG" description={description}>
     <TitleBanner title={title}></TitleBanner>
     <div class="flex flex-col gap-24 max-w-[88rem] mx-auto mb-12 px-4">
         <div class="flex flex-col xl:flex-row items-center xl:items-start xl:justify-between gap-10">
